objects/GP_Dato_Socio_FAN__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion_del_error__c</fullName>
        <label>Descripción del error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento__c</fullName>
        <label>Fecha de vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HayError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HayError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <label>MSISDN</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operacion__c</fullName>
        <label>Operacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procesado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procesado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Puntos__c</fullName>
        <label>Puntos</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GP_Dato_Socio_FAN</label>
    <nameField>
        <label>GP_Datos_Socios_FAN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP_Datos_Socios_FAN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>